--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "swiper": "^11.2.8",
     "three": "^0.171.0"
   },
   "devDependencies": {
